--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <body>
     <main>
         <header>
-        <h1>HTML/JavaScript Drills</h1>
-            <p>Welcome to the HTML/JavaScript Drills!  Today you will be learning how to manipulate the DOM (Document Object Model AKA the elements on your html page).  This page is split into 4 sections.  Read the comments in the JavaScript to see what needs to be done in each section.</p>
-    </header>
+            <h1>HTML/JavaScript Drills</h1>
+            <p>Welcome to the HTML/JavaScript Drills! Today you will be learning how to manipulate the DOM (Document
+                Object Model AKA the elements on your html page). This page is split into 4 sections. Read the comments
+                in the JavaScript to see what needs to be done in each section.</p>
+        </header>
         <div class="container">
             <div>
                 <div class="title">Hello, my name is <span id="name">Name</span></div>
@@ -104,21 +106,21 @@
             <div>
                 <div class="title">To Do List App</div>
                 <form class="form">
-                 
+
                     <div class="form-group">
                         <label for="todo" class="form-check-label">What do you need to do today?</label>
                         <input type="text" class="form-control" id="todo" placeholder="Go grocery shopping">
                     </div>
                     <button type="submit" class="btn btn-primary">Add to To Do List</button>
                 </form>
-                
+
             </div>
             <div>
-                   <div class="title"> To Dos</div>
-                    <ul id="todos">
-                        <li>I need to do something!</li>
-                    </ul>
-                </div>
+                <div class="title"> To Dos</div>
+                <ul id="todos">
+                    <li>I need to do something!</li>
+                </ul>
+            </div>
     </main>
 
     <script src="script.js"></script>
