final drill added

--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
                     <li>I need to do something!</li>
                 </ul>
             </div>
+        </div>
+        <div class="container">
+            <div>
+                <div class="title">SetTimeout Vs Set Interval</div>
+               Here's my second counter: <span id="seconds"></span>
+            </div>
+            <div>
+                Here's my delayed display:<div id="delayedDisplay"></div>
+            </div>
+        </div>
     </main>
 
     <script src="script.js"></script>
