Fix for attributes + correct label ids

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
           <div class="checkbox-label">Checks</div>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="humancheck">
-            <label class="form-check-label" for="defaultCheck1">
+            <label class="form-check-label" for="humancheck">
               I am a human
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="humancheck">
-            <label class="form-check-label" for="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="" id="codercheck">
+            <label class="form-check-label" for="codercheck">
               I am a coder
             </label>
           </div>
