modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
         Here's my delayed display:<div id="delayedDisplay"></div>
       </div>
     </div>
+
+    <div class="OwnSection">
+      <div id="animation">ANIMATION!!!</div>
+      <button type="button" id="startAnimation">Start Animation</button>
+      <button type="reset" id="stopAnimation">STOPPPPP</button>
+    </div>
   </main>
 
   <script src="script.js"></script>
